# dissertation

./: .gitignore  Makefile  matplotlibrc
book/: Bibliography.bib  Makefile  OwnBibliography.bib  bitflip.bib  classicthesis-config.tex  classicthesis.sty  dbittman-dissertation.tex  ext1.bib
book/Chapters/: app01.tex  ch01.tex  ch02.tex  ch03.tex  ch04.tex  ch05.tex  ch06.tex  ch07.tex  ch08.tex  ch09.tex  ch10.tex  chapter_01.tex
book/FrontBackmatter/: Abstract.tex  Acknowledgments.tex  Contents.tex  Dedication.tex  Foreword.tex  FormattingNote.tex  Publications.tex  Titleback.tex  Titlepage.tex
book/scripts/: cache_comp.py  cachesz.py  fotoverhead.py  frames_f.py  frames_w.py  instr.py  kvs.py  malloc_bf.py  obj_graph.dot  power.py  qlat.py  test.py  xht_fw.py  xht_perf.py  xorll_bfwr.py  xrbt_ex.py  xrbt_fwr.py  xrbt_perf.py  xrbt_perf_lookup.py  ycsb.py
book/ssrcbib/: .gitignore  GNUmakefile  bib_access_rsa  bib_access_rsa.pub  csrg.bib  csrgbib.tex  csrghtml.tex  csrghtmls.tex  csrghtmlt.tex  csrghtmly.tex  html-long-tag.bst  html-long-year.bst  html-long.bst  html-short.bst  latexc2html.pl  posthtmltag.awk  sec.bib
data/: README  out-sim-mal-bf-16-l2  out-sim-mal-bf-24-l2  out-sim-mal-bf-40-l2  out-sim-mal-bf-48-l2  out-sim-mal-br-16-l2  out-sim-mal-br-40-l2  out-sim-mal-br-48-l2  out-sim-mal-bw-16-l2  out-sim-mal-bw-40-l2  out-sim-mal-bw-48-l2  scr
data/cachesz/: out-sim-rbt-bf-rbt-seq  out-sim-rbt-bf-rbt-seq-l2  out-sim-rbt-bw-rbt-seq  out-sim-rbt-bw-rbt-seq-l2  (+8 more)
src/: include.mk
src/fot_overhead/: Cargo.toml
src/fot_overhead/src/: main.rs
(+22 files in other folders)
