[package]
name = "fot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#random_graphs = "0.1.1"
rand = { version = "0.8.5" , features = ["std"]}
petgraph = "0.5.0"
itertools = "0.10.3"
threadpool = "1.8.1"
running-average = "0.1.0"
